--- a/Desenvolvimento/spb_web/WebContent/paginas/template/templateLogin.xhtml
+++ b/Desenvolvimento/spb_web/WebContent/paginas/template/templateLogin.xhtml
@@ -12,13 +12,13 @@
  <h:body>
  <div id="header" align="center">
  <img src="../images/logo.png"/>
- <hr />
+ 
  </div>
 
  <ui:insert name="conteudo" /> 
 
  <div id="footer" style="text-align: center;position: absolute; bottom: 2px; "  >
- <hr />
+ <hr width="1350px"/>
  &copy; 2011 Sistema de Ponto Biométrico para Web
  </div>
  </h:body>
